--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.8.4",
     "date-fns": "^2.30.0",
     "express-rate-limit": "^7.5.0",
+    "firebase": "^11.7.1",
     "form-data": "^4.0.2",
     "framer-motion": "^10.16.4",
     "helmet": "^8.1.0",
