--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "test": "echo \"No tests specified\" && exit 0",
     "electron:dev": "concurrently \"cross-env PORT=3333 next dev -p 3333\" \"wait-on http://localhost:3333 && electron .\"",
     "electron:build": "npm run build && electron-builder",
     "package:mac": "next build && electron-builder --mac",
@@ -22,7 +27,8 @@
     "install-pearl": "node scripts/save-pearl-icon.js",
     "create-png-icon": "node electron/create-base64-icon.js",
     "build:desktop": "node scripts/build.js",
-    "prepare-for-landing": "node scripts/prepare-for-landing.js"
+    "prepare-for-landing": "node scripts/prepare-for-landing.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -46,6 +52,8 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^10.4.16",
     "canvas": "^3.1.0",
     "concurrently": "^8.2.2",
@@ -55,7 +63,10 @@
     "electron-serve": "^1.2.0",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.0",
     "postcss": "^8.4.32",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "wait-on": "^7.2.0"
@@ -89,5 +100,14 @@
     "forceCodeSigning": false,
     "npmRebuild": false,
     "buildDependenciesFromSource": true
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,css}": [
+      "prettier --write"
+    ]
   }
 }
